--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Quizzify" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Quizzify" parent="Theme.MaterialComponents.Light.DarkActionBar.Bridge">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/startcolor</item>
+        <item name="colorPrimaryDark">@color/endcolor</item>
+        <item name="colorAccent">@color/btnlogin</item>
     </style>
+
+    <style name="Base.Theme.Quizzify.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Customize your dark theme here. -->
+        <item name="colorPrimary">@color/startcolor</item>
+        <item name="colorPrimaryDark">@color/endcolor</item>
+        <item name="colorAccent">@color/btnlogin</item>
+</style>
 </resources>
