--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -4,9 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:background="#C4D9EA"
     android:orientation="vertical"
     tools:context=".activities.QuestionActivity">
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:id="@+id/topBarQ"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:background="#1E838F"
+        android:elevation="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/Qno"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="1/10"
+            android:textColor="#ffff"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:id="@+id/quiztime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="2:00 min"
+            android:textColor="#45ED4C"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_submitquiz"
+            android:textAllCaps="false"
+            android:text="Submit"
+            android:textColor="#ffff"
+            android:id="@+id/btnSubmit"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:id="@+id/topBar2"
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:background="#0B3E55"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topBarQ">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="GK"
+            android:id="@+id/quizCat"
+            android:layout_weight="1"
+            android:textColor="#ffff"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
+
+        <ImageView
+            android:layout_width="24dp"
+            android:id="@+id/bookmarkopt"
+            android:layout_height="24dp"
+            android:layout_weight="1"
+            android:src="@drawable/ookmark_white"/>
+
+
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/description"
@@ -17,67 +94,62 @@
         android:fontFamily="@font/doppio_one"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    
-    <Button
-        android:visibility="invisible"
-        android:textAllCaps="false"
-        android:text="Previous"
-        android:layout_marginEnd="8dp"
-        android:id="@+id/btnPrevious"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/guideline"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
-    
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        app:layout_constraintGuide_percent="0.5"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
-    
-    <Button
+        app:layout_constraintTop_toBottomOf="@id/topBar2"
+        app:layout_constraintBottom_toTopOf="@id/optionlist"/>
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:textAllCaps="false"
-        app:layout_constraintLeft_toRightOf="@+id/guideline"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="8dp"
-        android:text="Next"
-        android:id="@+id/btnNext"/>
-    
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:id="@+id/bottomBar"
+        android:background="#1E838F"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8"
-        android:id="@+id/horizontal_guideline"/>
+        app:layout_constraintTop_toBottomOf="@+id/optionlist"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <Button
+            android:visibility="invisible"
+            android:textAllCaps="false"
+            android:text="Previous"
+            android:background="@drawable/btn_nextprevquiz"
+            android:id="@+id/btnPrevious"
+            android:layout_width="20dp"
+            android:layout_weight="1"
+            android:layout_height="45dp"/>
+
+
+        <Button
+            android:layout_width="20dp"
+            android:layout_height="45dp"
+            android:visibility="invisible"
+            android:layout_weight="1"
+            android:background="@drawable/btn_nextprevquiz"
+            android:textAllCaps="false"
+            android:layout_marginStart="8dp"
+            android:text="Next"
+            android:id="@+id/btnNext"/>
+
+
+    </LinearLayout>
+
+    
+
+    
+
     
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/optionlist"
         app:layout_constraintTop_toBottomOf="@+id/description"
         app:layout_constraintStart_toStartOf="@+id/description"
         app:layout_constraintEnd_toEndOf="@+id/description"
-        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
+        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
         android:layout_marginTop="8dp"
         android:layout_width="0dp"
         android:layout_height="0dp"/>
 
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:textAllCaps="false"
-        android:text="Submit"
-        android:layout_marginStart="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/guideline"
-        android:id="@+id/btnSubmit"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
