--- a/app/src/main/res/layout/fragment_leaderboard_fragment.xml
+++ b/app/src/main/res/layout/fragment_leaderboard_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/endcolor"
-    tools:context=".leaderboard_fragment">
+    tools:context=".fragments.leaderboard_fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
