--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -6,6 +6,10 @@
         android:id="@+id/Home"
         android:icon="@drawable/home"/>
     <item
+        android:title="Add Quiz"
+        android:id="@+id/addquiz"
+        android:icon="@drawable/addquiz_icon"/>
+    <item
         android:title="Leaderboard"
         android:id="@+id/Leaderboard"
         android:icon="@drawable/leaderboard"/>
