--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Quizzify" parent="Theme.MaterialComponents.Light.DarkActionBar.Bridge">
+    <style name="Base.Theme.Quizzify" parent="Theme.MaterialComponents.NoActionBar.Bridge">
         <!-- Customize your dark theme here. -->
-        <item name="colorPrimary">@color/startcolor</item>
+        <item name="colorPrimary">@color/btnlogin</item>
         <item name="colorPrimaryDark">@color/endcolor</item>
         <item name="colorAccent">@color/btnlogin</item>
+
     </style>
 
     <style name="Base.Theme.Quizzify.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
@@ -12,5 +13,6 @@
         <item name="colorPrimary">@color/startcolor</item>
         <item name="colorPrimaryDark">@color/endcolor</item>
         <item name="colorAccent">@color/btnlogin</item>
+        <item name="android:windowBackground">@color/white</item>
 </style>
 </resources>
