--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Quizzify" parent="Theme.AppCompat.DayNight">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.Quizzify" parent="Theme.MaterialComponents.NoActionBar.Bridge">
+        <!-- Customize your dark theme here. -->
+        <item name="colorPrimary">@color/btnlogin</item>
+        <item name="colorPrimaryDark">@color/endcolor</item>
+        <item name="colorAccent">@color/btnlogin</item>
+
     </style>
 
-    <style name="Theme.Quizzify" parent="Base.Theme.Quizzify" />
+    <style name="Base.Theme.Quizzify.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your dark theme here. -->
+        <item name="colorPrimary">@color/startcolor</item>
+        <item name="colorPrimaryDark">@color/endcolor</item>
+        <item name="colorAccent">@color/btnlogin</item>
+        <item name="android:windowBackground">@color/white</item>
+    </style>
 </resources>
