--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="0dp"
@@ -20,6 +21,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
+
+            <ImageView
+                android:id="@+id/backtostart"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/baseline_arrow_back_24"
+                android:layout_gravity="start"/>
 
             <ImageView
                 android:id="@+id/trophy"
@@ -36,6 +45,8 @@
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:textColor="@android:color/white" />
+
+
         </LinearLayout>
 
         <TextView
