--- a/app/src/main/res/layout/activity_start_test.xml
+++ b/app/src/main/res/layout/activity_start_test.xml
@@ -109,7 +109,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Best Score"
+                    android:text="Last Score"
                     android:gravity="bottom"
                     android:textAlignment="center"
                     android:textSize="18sp"
@@ -118,7 +118,7 @@
                     tools:ignore="RtlCompat" />
 
                 <TextView
-                    android:id="@+id/bestscore"
+                    android:id="@+id/lastscore"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="80"
